# crypto_trading_system

./: .gitignore  README.md
.github/workflows/: ci.yml
deploy/trading_backend/: pyproject.toml
deploy/trading_backend/app/routers/: trading.py
deploy/trading_backend/app/schemas/: trading.py
deploy/trading_backend/app/services/market_analysis/: __init__.py
deploy_minimal/trading_backend/: pyproject.toml  requirements.txt  setup.py
deploy_minimal/trading_backend/app/: main.py
deploy_minimal/trading_backend/app/models/: futures.py
deploy_minimal/trading_backend/app/services/trading/: fee_calculator.py  pair_selector.py
deploy_minimal/trading_backend/clean_deploy/src/app/: __init__.py  database.py  dependencies.py  main.py
deploy_minimal/trading_backend/clean_deploy/src/app/models/: enums.py  futures.py  signals.py
deploy_minimal/trading_backend/clean_deploy/src/app/repositories/: signal_repository.py
deploy_minimal/trading_backend/clean_deploy/src/app/routers/: __init__.py  account.py  notification.py  websocket.py
deploy_minimal/trading_backend/clean_deploy/src/app/services/market_analysis/: market_data_service.py
deploy_minimal/trading_backend/clean_deploy/src/app/services/monitoring/: account_monitor.py
deploy_minimal/trading_backend/clean_deploy/src/app/services/notification/: notification_service.py
deploy_minimal/trading_backend/clean_deploy/src/app/services/trading/: pair_selector.py
trading_backend/: .gitignore  .ruff.toml  alembic.ini  mypy.ini  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
(+111 files in other folders)
